--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+body {
+  margin: 0;
+
+  background-color: rgb(248, 185, 233);
+  margin-top: 5%;
+  font-size: large;
+}
+
+button{
+  background-color: rgb(18, 13, 9);
+  color: rgb(16, 6, 6);
+  width: 5%;
+  height: 50px;
+  font-size: large;
+  
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
